--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text1">
             <h1>
                 Милые и <br>
-                пушистые!
+                пушистые ЧЛЕНЫ!
             </h1>
             <p>
                 Узнайте всё об удивительных ушастых созданиях на нашем <br> сайте!
